config/includes.chroot/etc/ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### deny_log tcp 823 ::/0 any ::/0 in
-A ufw6-user-logging-input -p tcp --dport 823 -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw6-user-logging-input -p tcp --dport 823 -j RETURN
-A ufw6-user-input -p tcp --dport 823 -j ufw6-user-logging-input
-A ufw6-user-input -p tcp --dport 823 -j DROP

### tuple ### allow any 52944 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 52944 -j ACCEPT
-A ufw6-user-input -p udp --dport 52944 -j ACCEPT

### tuple ### allow udp 137,138 ::/0 any ::/0 in
-A ufw6-user-input -p udp -m multiport --dports 137,138 -j ACCEPT

### tuple ### allow tcp 139,445 ::/0 any ::/0 in
-A ufw6-user-input -p tcp -m multiport --dports 139,445 -j ACCEPT

### tuple ### allow udp 5353 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 5353 -j ACCEPT

### tuple ### allow udp 5353 ::/0 any ::/0 out
-A ufw6-user-output -p udp --dport 5353 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
